--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -16,6 +16,13 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+    - name: Cache gradle files
+      uses: actions/cache@v1
+      env:
+        cache-name: cache-gradle-files
+      with:
+        path: .gradle
+        key: gradle-${{ env.cache-name }}-${{ hashFiles('build.gradle') }}
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Check spotless
