ワークフロー修正

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,9 +1,9 @@
-# This workflow will build a Java project with Gradle
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
-
 name: Java CI with Gradle
 
-on: push
+on:
+  push:
+    branches-ignore:
+      gh-pages
 
 jobs:
   build:
@@ -21,7 +21,7 @@ jobs:
       env:
         cache-name: cache-gradle-files
       with:
-        path: .gradle
+        path: ~/.gradle
         key: gradle-${{ env.cache-name }}-${{ hashFiles('build.gradle') }}
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
@@ -29,5 +29,3 @@ jobs:
       run: ./gradlew spotlessCheck
     - name: Run tests
       run: ./gradlew clean test
-    - name: Build with Gradle
-      run: ./gradlew build
