--- a/.github/workflows/javadoc.yml
+++ b/.github/workflows/javadoc.yml
@@ -17,7 +17,7 @@ jobs:
       env:
         cache-name: cache-gradle-files
       with:
-        path: .gradle
+        path: ~/.gradle/caches
         key: gradle-${{ env.cache-name }}-${{ hashFiles('build.gradle') }}
     - name: Generate Javadoc
       run: ./gradlew javadocUpdate
