--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,7 +21,7 @@ jobs:
       env:
         cache-name: cache-gradle-files
       with:
-        path: ~/.gradle
+        path: ~/.gradle/caches
         key: gradle-${{ env.cache-name }}-${{ hashFiles('build.gradle') }}
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
