--- a/.github/workflows/javadoc.yml
+++ b/.github/workflows/javadoc.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Cache gradle files
       uses: actions/cache@v1
       env:
-        cache-name: cache-gradle-files
+        cache-name: cache-gradle-files-for-javadoc
       with:
         path: ~/.gradle/caches
         key: gradle-${{ env.cache-name }}-${{ hashFiles('build.gradle') }}
@@ -26,3 +26,4 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./docs
+        enable_jekyll: true
